--- a/App.config
+++ b/App.config
@@ -15,4 +15,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>  
+    <add name="myDatabaseConnection" connectionString="server=localhost;user=root;database=classicmodels;port=3306;password=;" />   
+</connectionStrings>  
 </configuration>
