--- a/packages.config
+++ b/packages.config
@@ -1,14 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.11.4" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
-  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
-  <package id="MySql.Data" version="8.0.22" targetFramework="net472" />
-  <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="DevExpress.Charts" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Charts.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.CodeParser" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Data" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Data.Desktop" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.DataAccess" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Diagram.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Gauges.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Images" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Mvvm" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Office.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Pdf.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Pdf.Drawing" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.PivotGrid.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Printing.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Reporting.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.RichEdit.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.RichEdit.Export" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Sparkline.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Charts" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Diagram" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.DocumentViewer.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.ExpressionEditor" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Grid" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Grid.Core" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Layout" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Navigation" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Office" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.PivotGrid" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Printing" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.PropertyGrid" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Reporting" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.RichEdit" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Wpf.Themes.Office2019Colorful" version="20.1.6" targetFramework="net48" />
+  <package id="DevExpress.Xpo" version="20.1.6" targetFramework="net48" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.1016.290" targetFramework="net48" />
 </packages>
