--- a/packages.config
+++ b/packages.config
@@ -36,5 +36,6 @@
   <package id="DevExpress.Wpf.RichEdit" version="20.1.6" targetFramework="net48" />
   <package id="DevExpress.Wpf.Themes.Office2019Colorful" version="20.1.6" targetFramework="net48" />
   <package id="DevExpress.Xpo" version="20.1.6" targetFramework="net48" />
-  <package id="Microsoft.SqlServer.Types" version="14.0.1016.290" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="Microsoft.SqlServer.Types" version="10.50.1600.1" targetFramework="net48" />
 </packages>
